--- a/Wishtrend-scraper.ipynb
+++ b/Wishtrend-scraper.ipynb
@@ -2,8 +2,161 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "fa081171-0bff-42f3-80cf-927c53f39995",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import csv\n",
+    "\n",
+    "# create empty list to store product information\n",
+    "productlist = []\n",
+    "\n",
+    "for x in range(1,5):\n",
+    "    url = f'https://wishtrend.com/en-gb/collections/bestsellers?page={x}'\n",
+    "    r = requests.get(url)\n",
+    "    soup = BeautifulSoup(r.content, 'lxml')\n",
+    "    websitecode = soup.find_all('div', class_='mt-3 lg:mt-5')\n",
+    "\n",
+    "    for item in websitecode:\n",
+    "    # Extract brand, name, current price, original price, discount percentage\n",
+    "        brand = item.find('span', class_='sf__pcard-vendor').text.strip()\n",
+    "        name = item.find('a', class_='sf__pcard-name').text.strip()\n",
+    "        current_price = item.find('span', class_='prod__price').text.strip()\n",
+    "        original_price = item.find('span', class_='prod__compare_price').text.strip()\n",
+    "        discount_percent = item.find('span', class_='discount_price').text.strip()\n",
+    "\n",
+    "        # create a dictionary for each product\n",
+    "        product_info = {\"brand\": brand, \"name\": name, \"current_price\": current_price, \"original_price\": original_price, \"discount_percent\": discount_percent}\n",
+    "        \n",
+    "        # append dictionary to product list\n",
+    "        productlist.append(product_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "07d76460-2a92-4b0a-bb65-068af238646e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              brand                                       name current_price  \\\n",
+      "0            Klairs                     All-day Airy Sunscreen        $12.60   \n",
+      "1            Klairs                Midnight Blue Calming Cream        $12.50   \n",
+      "2            Klairs         Supple Preparation Unscented Toner        $13.20   \n",
+      "3      By Wishtrend              Cera-barrier Soothing Ampoule        $15.40   \n",
+      "4          I'M FROM                            Mugwort Essence        $26.00   \n",
+      "5            Klairs                  Rich Moist Soothing Cream         $7.80   \n",
+      "6      By Wishtrend     Vitamin A-mazing Bakuchiol Night Cream        $23.10   \n",
+      "7          I'M FROM                                 Rice Toner        $19.60   \n",
+      "8   STARTER PACKAGE         I'm From Starter Package (Renewal)        $70.20   \n",
+      "9               WTL  Correcting Post Pigmentation Clearing Box        $65.00   \n",
+      "10  STARTER PACKAGE                     Klairs Starter Package        $74.53   \n",
+      "11           Klairs              Freshly Juiced Vitamin E Mask        $20.25   \n",
+      "12     By Wishtrend             Green Tea & Enzyme Powder Wash        $19.20   \n",
+      "13           Klairs                Freshly Juiced Vitamin Drop        $16.10   \n",
+      "14  STARTER PACKAGE               By Wishtrend Starter Package        $74.80   \n",
+      "15           Klairs            Supple Preparation Facial Toner        $15.40   \n",
+      "16         I'M FROM                                 Honey Mask        $26.60   \n",
+      "17     By Wishtrend           Mandelic Acid 5% Skin Prep Water        $15.40   \n",
+      "18           Klairs                Rich Moist Foaming Cleanser        $13.50   \n",
+      "19     GIFTS & SETS                 Freshly Juiced Vitamin Set        $27.50   \n",
+      "20           Klairs      Freshly Juiced Vitamin Charging Serum        $26.00   \n",
+      "21         I'M FROM                     Vitamin Tree Water Gel        $19.60   \n",
+      "22         I'M FROM                             Fig Scrub Mask        $22.40   \n",
+      "23  CHASIN' RABBITS                     Mindful Bubble Cleanse        $13.80   \n",
+      "24         I'M FROM                                   Hug Mask        $24.50   \n",
+      "25     By Wishtrend                     UV Defense Moist Cream        $16.80   \n",
+      "26           Klairs           Gentle Black Fresh Cleansing Oil        $19.20   \n",
+      "27            COSRX           Low pH Good Morning Gel Cleanser         $8.40   \n",
+      "28            COSRX       Aloe Soothing Sun Cream SPF50+ PA+++         $9.60   \n",
+      "29           Klairs            Gentle Black Deep Cleansing Oil        $17.25   \n",
+      "30           Klairs        Midnight Blue Youth Activating Drop        $21.00   \n",
+      "31     By Wishtrend        Pure Vitamin C 21.5% Advanced Serum        $19.50   \n",
+      "32           Klairs         Supple Preparation All over Lotion        $19.50   \n",
+      "33  STARTER PACKAGE                      Cosrx Starter Package        $48.60   \n",
+      "34            COSRX      Advanced Snail Mucin 96 Power Essence        $15.00   \n",
+      "35           Klairs           Midnight Blue Calming Sheet Mask         $2.40   \n",
+      "36            COSRX         Advanced Snail 92 All in One Cream        $15.60   \n",
+      "37           Klairs               Toner Mate 2 in 1 Cotton pad         $5.20   \n",
+      "38    BRAND PACKAGE                         Rich Moist Package        $36.85   \n",
+      "39     By Wishtrend                    Clear Skin Shield Patch         $8.50   \n",
+      "40            COSRX                   Acne Pimple Master Patch         $3.60   \n",
+      "41            COSRX           Advanced Snail Peptide Eye Cream        $16.80   \n",
+      "42             elmt                 PURE VITAMIN C 20% ELEMENT        $29.25   \n",
+      "43           Klairs      Rich Moist Soothing Tencel Sheet Mask         $2.40   \n",
+      "44         ROVECTIN                          Lotus Water Cream        $12.00   \n",
+      "45     GIFTS & SETS                         Sheet Mask Bundles        $18.70   \n",
+      "\n",
+      "   original_price discount_percent  \n",
+      "0          $21.00              40%  \n",
+      "1          $25.00              50%  \n",
+      "2          $22.00              40%  \n",
+      "3          $28.00              45%  \n",
+      "4          $40.00              35%  \n",
+      "5          $26.00              70%  \n",
+      "6          $33.00              30%  \n",
+      "7          $28.00              30%  \n",
+      "8         $117.00              40%  \n",
+      "9         $130.00              50%  \n",
+      "10        $135.50              45%  \n",
+      "11         $27.00              25%  \n",
+      "12         $24.00              20%  \n",
+      "13         $23.00              30%  \n",
+      "14        $136.00              45%  \n",
+      "15         $22.00              30%  \n",
+      "16         $38.00              30%  \n",
+      "17         $22.00              30%  \n",
+      "18         $18.00              25%  \n",
+      "19         $50.00              45%  \n",
+      "20         $40.00              35%  \n",
+      "21         $28.00              30%  \n",
+      "22         $32.00              30%  \n",
+      "23         $23.00              40%  \n",
+      "24         $35.00              30%  \n",
+      "25         $28.00              40%  \n",
+      "26         $24.00              20%  \n",
+      "27         $14.00              40%  \n",
+      "28         $16.00              40%  \n",
+      "29         $23.00              25%  \n",
+      "30         $30.00              30%  \n",
+      "31         $30.00              35%  \n",
+      "32         $26.00              25%  \n",
+      "33         $81.00              40%  \n",
+      "34         $25.00              40%  \n",
+      "35          $3.00              20%  \n",
+      "36         $26.00              40%  \n",
+      "37          $6.50              20%  \n",
+      "38         $67.00              45%  \n",
+      "39         $10.00              15%  \n",
+      "40          $6.00              40%  \n",
+      "41         $28.00              40%  \n",
+      "42         $45.00              35%  \n",
+      "43          $3.00              20%  \n",
+      "44         $20.00              40%  \n",
+      "45         $23.50              20%  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# export productlist to Pandas dataframe\n",
+    "df = pd.DataFrame(productlist)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d7cda9af-edbf-44f3-a6d9-44af9378e9c0",
    "metadata": {
     "scrolled": true
    },
@@ -12,106 +165,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'brand': 'Klairs', 'name': 'Rich Moist Soothing Cream', 'current_price': '$7.80', 'sale_price': '$23.50', 'discount_percent': '70%'}]\n",
-      "[{'brand': 'By Wishtrend', 'name': 'Vitamin A-mazing Bakuchiol Night Cream', 'current_price': '$23.10', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': \"I'M FROM\", 'name': 'Rice Toner', 'current_price': '$19.60', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': 'WTL', 'name': 'Correcting Post Pigmentation Clearing Box', 'current_price': '$65.00', 'sale_price': '$23.50', 'discount_percent': '50%'}]\n",
-      "[{'brand': 'STARTER PACKAGE', 'name': 'Klairs Starter Package', 'current_price': '$74.53', 'sale_price': '$23.50', 'discount_percent': '45%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'All-day Airy Sunscreen', 'current_price': '$12.60', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Freshly Juiced Vitamin E Mask', 'current_price': '$20.25', 'sale_price': '$23.50', 'discount_percent': '25%'}]\n",
-      "[{'brand': 'By Wishtrend', 'name': 'Green Tea & Enzyme Powder Wash', 'current_price': '$19.20', 'sale_price': '$23.50', 'discount_percent': '20%'}]\n",
-      "[{'brand': 'STARTER PACKAGE', 'name': \"I'm From Starter Package (Renewal)\", 'current_price': '$70.20', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Freshly Juiced Vitamin Drop', 'current_price': '$16.10', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': \"I'M FROM\", 'name': 'Mugwort Essence', 'current_price': '$26.00', 'sale_price': '$23.50', 'discount_percent': '35%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Midnight Blue Calming Cream', 'current_price': '$12.50', 'sale_price': '$23.50', 'discount_percent': '50%'}]\n",
-      "[{'brand': 'STARTER PACKAGE', 'name': 'By Wishtrend Starter Package', 'current_price': '$74.80', 'sale_price': '$23.50', 'discount_percent': '45%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Supple Preparation Unscented Toner', 'current_price': '$13.20', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Supple Preparation Facial Toner', 'current_price': '$15.40', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': \"I'M FROM\", 'name': 'Honey Mask', 'current_price': '$26.60', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': 'By Wishtrend', 'name': 'Mandelic Acid 5% Skin Prep Water', 'current_price': '$15.40', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Rich Moist Foaming Cleanser', 'current_price': '$13.50', 'sale_price': '$23.50', 'discount_percent': '25%'}]\n",
-      "[{'brand': 'GIFTS & SETS', 'name': 'Freshly Juiced Vitamin Set', 'current_price': '$27.50', 'sale_price': '$23.50', 'discount_percent': '45%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Freshly Juiced Vitamin Charging Serum', 'current_price': '$26.00', 'sale_price': '$23.50', 'discount_percent': '35%'}]\n",
-      "[{'brand': \"I'M FROM\", 'name': 'Vitamin Tree Water Gel', 'current_price': '$19.60', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': \"I'M FROM\", 'name': 'Fig Scrub Mask', 'current_price': '$22.40', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': \"CHASIN' RABBITS\", 'name': 'Mindful Bubble Cleanse', 'current_price': '$13.80', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': \"I'M FROM\", 'name': 'Hug Mask', 'current_price': '$24.50', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': 'By Wishtrend', 'name': 'UV Defense Moist Cream', 'current_price': '$16.80', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Gentle Black Fresh Cleansing Oil', 'current_price': '$19.20', 'sale_price': '$23.50', 'discount_percent': '20%'}]\n",
-      "[{'brand': 'COSRX', 'name': 'Low pH Good Morning Gel Cleanser', 'current_price': '$8.40', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'COSRX', 'name': 'Aloe Soothing Sun Cream SPF50+ PA+++', 'current_price': '$9.60', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Gentle Black Deep Cleansing Oil', 'current_price': '$17.25', 'sale_price': '$23.50', 'discount_percent': '25%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Midnight Blue Youth Activating Drop', 'current_price': '$21.00', 'sale_price': '$23.50', 'discount_percent': '30%'}]\n",
-      "[{'brand': 'By Wishtrend', 'name': 'Pure Vitamin C 21.5% Advanced Serum', 'current_price': '$19.50', 'sale_price': '$23.50', 'discount_percent': '35%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Supple Preparation All over Lotion', 'current_price': '$19.50', 'sale_price': '$23.50', 'discount_percent': '25%'}]\n",
-      "[{'brand': 'STARTER PACKAGE', 'name': 'Cosrx Starter Package', 'current_price': '$48.60', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'COSRX', 'name': 'Advanced Snail Mucin 96 Power Essence', 'current_price': '$15.00', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Midnight Blue Calming Sheet Mask', 'current_price': '$2.40', 'sale_price': '$23.50', 'discount_percent': '20%'}]\n",
-      "[{'brand': 'COSRX', 'name': 'Advanced Snail 92 All in One Cream', 'current_price': '$15.60', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Toner Mate 2 in 1 Cotton pad', 'current_price': '$5.20', 'sale_price': '$23.50', 'discount_percent': '20%'}]\n",
-      "[{'brand': 'BRAND PACKAGE', 'name': 'Rich Moist Package', 'current_price': '$36.85', 'sale_price': '$23.50', 'discount_percent': '45%'}]\n",
-      "[{'brand': 'By Wishtrend', 'name': 'Clear Skin Shield Patch', 'current_price': '$8.50', 'sale_price': '$23.50', 'discount_percent': '15%'}]\n",
-      "[{'brand': 'COSRX', 'name': 'Acne Pimple Master Patch', 'current_price': '$3.60', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'COSRX', 'name': 'Advanced Snail Peptide Eye Cream', 'current_price': '$16.80', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'elmt', 'name': 'PURE VITAMIN C 20% ELEMENT', 'current_price': '$29.25', 'sale_price': '$23.50', 'discount_percent': '35%'}]\n",
-      "[{'brand': 'By Wishtrend', 'name': 'Cera-barrier Soothing Ampoule', 'current_price': '$15.40', 'sale_price': '$23.50', 'discount_percent': '45%'}]\n",
-      "[{'brand': 'Klairs', 'name': 'Rich Moist Soothing Tencel Sheet Mask', 'current_price': '$2.40', 'sale_price': '$23.50', 'discount_percent': '20%'}]\n",
-      "[{'brand': 'ROVECTIN', 'name': 'Lotus Water Cream', 'current_price': '$12.00', 'sale_price': '$23.50', 'discount_percent': '40%'}]\n",
-      "[{'brand': 'GIFTS & SETS', 'name': 'Sheet Mask Bundles', 'current_price': '$18.70', 'sale_price': '$23.50', 'discount_percent': '20%'}]\n"
+      "Data exported to WishtrendBestsellersFinal.csv\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
-    "import json\n",
-    "from bs4 import BeautifulSoup\n",
+    "# create csv and write dataframe to it\n",
+    "csv_file_path = 'WishtrendBestsellersFinal.csv'\n",
+    "df.to_csv(csv_file_path, index=False, encoding='utf-8')\n",
     "\n",
-    "for x in range(1,5):\n",
-    "    url = f'https://wishtrend.com/en-gb/collections/bestsellers?page={x}'\n",
-    "    r = requests.get(url)\n",
-    "    soup = BeautifulSoup(r.content, 'lxml')\n",
-    "    productlist = soup.find_all('div', class_='mt-3 lg:mt-5')\n",
-    "\n",
-    "    for item in productlist:\n",
-    "    # Extract brand, name, current price, original price, discount percentage\n",
-    "        brand = item.find('span', class_='sf__pcard-vendor').text.strip()\n",
-    "        name = item.find('a', class_='sf__pcard-name').text.strip()\n",
-    "        current_price = item.find('span', class_='prod__price').text.strip()\n",
-    "        original_price = item.find('span', class_='prod__compare_price').text.strip()\n",
-    "        discount_percent = item.find('span', class_='discount_price').text.strip()\n",
-    "\n",
-    "        # store the information in a data structure: create a list and append each item to it.\n",
-    "        all_products = []\n",
-    "        product_info = {\"brand\": brand, \"name\": name, \"current_price\": current_price, \"sale_price\": sale_price, \"discount_percent\": discount_percent}\n",
-    "        all_products.append(product_info)\n",
-    "        print(all_products)\n",
-    "        # Print or store the information as needed\n",
-    "        # print(f\"{brand}, {name}, {price},{sale_price},{discount_percent}\")"
+    "print(f\"Data exported to {csv_file_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "07d76460-2a92-4b0a-bb65-068af238646e",
+   "execution_count": null,
+   "id": "19a6f3e6-1fa6-416a-a007-6cc787df05f9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3650583719.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[26], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    * Pull ratings info\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "* pull ratings info\n",
-    "* loop through all pages\n",
-    "* put into table\n",
-    "* export to CSV\n",
-    "* export to db directly\n",
-    "* pull product ingredients info from product page + link eith bestseller info"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
